# banana-net

./: .gitignore  Makefile  README.md  codealike.json  pyproject.toml  roadmap.md  settings.py
banana_net/training/: __init__.py
docs/: audio_clip_processing.md  parsing_utilities.md  yolo_dataset_transformation.md
examples/: test_logger.py
notebooks/: exploration.ipynb  species_consistency_check.ipynb
src/banana_net/: __init__.py
src/banana_net/models/: __init__.py  annotation.py  audio.py  building_blocks.py  detection.py  enums.py  events.py  sound_classes.py
src/banana_net/testing/: __init__.py
src/banana_net/utils/: __init__.py  anchor_box_utils.py  audio_clip_processing.py  data_augmentation.py  data_balancing.py  data_preprocessing.py  data_visualization.py  dataset.py  loading.py  logger.py  parsing.py  preprocessing.py  transform.py
