[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "banana-net"
version = "0.1.0"
authors = [{ name="Fernando Candia", email="a20213812@pucp.edu.pe" }]
readme = "README.md"
description = "Audio deep learning undergraduate thesis package"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "pandas>=1.5.0",
    "numpy>=1.24.0",
    "matplotlib>=3.6.0",
    "pathlib2>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=5.0.0",
]

[tool.setuptools]
package-dir = {"" = "banana_net"}

[tool.setuptools.packages.find]
where = ["banana_net"]
include = ["banana_net*"]

[project.urls]
"Repository" = "https://github.com/nhrot-fc/banana-net"